--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,14 @@
   color:gray;
 }
 
+.tab-nav button:not(.active) {
+  color: gray;
+}
+
+.tab-nav button.Mui-selected {
+  color: #FFFFFF;
+}
+
 .tab-container {
   height: 80vh;
   display:flex;
@@ -24,7 +32,7 @@
 .glyph-container {
   display:flex;
   border:1px solid;
-  font-size:calc(1rem + 10vw);
+  font-size:calc(3rem + 10vw);
   font-weight:bold;
   margin:20px;
   border-radius:6px;
@@ -54,9 +62,4 @@
 
 .switch-item {
   margin:5px 0;
-}
-
-.heckinButton {
-  height:100px;
-  width:80%;
 }
